[package]
name = "foundations-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", default-features = false }
foundations-macros="3"
foundations = "3"
anyhow = "1"
features = "0.10"
futures-util="0.3"